# electrum-ecc

./: .cirrus.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.md  __init__.py  ecc_fast.py  pyproject.toml  setup.py
_custom_build/: backend.py
contrib/: release.sh
contrib/sdist/: build.sh  make_sdist.sh
src/electrum_ecc/: __init__.py  ecc_fast.py  keys.py
tests/: test_basics.py  test_ecdsa.py  test_schnorr.py
